--- a/css/main.css
+++ b/css/main.css
@@ -1,143 +1,63 @@
-		body {
-            padding: 0;
-            margin: 0;
-            overflow-y: scroll;
-        }
-       
-        html, body, #map {
-/*             height: 450px; */
-            font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
+html, body, #map{
+    font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
+}
+body{
+    padding: 0;
+    margin: 0;
+    overflow-y: scroll;
+}
+.topRow{
+    margin-right: 0px;
+    padding-left: 25px;
+}
+#map{
+    margin-top:10px !important;
+    height:500px;
+}
+.typeahead{
+    width:90%;
+}
+.lorem{
+    font-style: italic;
+    color: #AAA;
+}
+.tl{
+    padding-bottom: 3px;
+}
+.categories{
+    box-shadow: 0 1px 5px rgba(0,0,0,0.4);
+    padding-left:10px;
+    padding-right:5px;
+    margin-bottom:14px;
+    margin-right:1px;
+}
+.exportB{
+    cursor:pointer;
+}
 
-        }
-        .topRow{
-        	margin-right: 0px;
-        	padding-left: 25px;
-        }
-		#map{
-			margin-top:10px !important;
-			height:500px;
-		}
-		.typeahead{
-			width:90%;
-		}
-/* 		.legendRow{ */
-/* 			line-height: 16px; */
-/* 		} */
-/* 		.lengendRow img{ */
-/* 			vertical-align: middle; */
-/* 		} */
-/* 		.lengendRow span{ */
-/* 			vertical-align: middle; */
-/* 		} */
-        .lorem {
-            font-style: italic;
-            color: #AAA;
-        }
-		.tl {
-			padding-bottom: 3px;
-		}
-		/*.tl-none {
-			color:white;
-			background-color:white;
-		}
-		.tl-success {
-			color:#5cb85c;
-			background-color:#5cb85c;
-		}
-		.tl-danger {
-			color:#d9534f;
-			background-color:#d9534f;
-		}
-		.tl-warning {
-			color:orange;
-			background-color:orange;
-		}*/
-		.categories{
-			box-shadow: 0 1px 5px rgba(0,0,0,0.4);
-			padding-left:10px;
-			padding-right:5px;
-			margin-bottom:14px;
-			margin-right:1px;
-		}
-		.analysis-btn{
-			top:10px;
-			left: 50px;
-			position: absolute;
-			z-index:5000
-		}
-		.exportB{
-			cursor:pointer;
-		}
-/* 		.dropdown-submenu { */
-/* 			position: relative; */
-/* 			z-index:5000 */
-/* 		} */
+#itemTitle{
+    animation-name: Title;
+    animation-duration: 0.75s;
+}
+@keyframes Title{
+    0%{background-color: white;}
+    50%{background-color: #0083cb; color: white;}
+    100%{background-color: white;}
+}
 
-/* 		.dropdown-submenu>.dropdown-menu { */
-/* 			top: 0; */
-/* 			left: 100%; */
-/* 			z-index:5000; */
-/* 			margin-top: -6px; */
-/* 			margin-left: -1px; */
-/* 			-webkit-border-radius: 0 6px 6px 6px; */
-/* 			-moz-border-radius: 0 6px 6px; */
-/* 			border-radius: 0 6px 6px 6px; */
-/* 		} */
-
-/* 		.dropdown-submenu:hover>.dropdown-menu { */
-/* 			display: block; */
-/* 		} */
-
-/* 		.dropdown-submenu>a:after { */
-/* 			display: block; */
-/* 			content: " "; */
-/* 			float: right; */
-/* 			width: 0; */
-/* 			height: 0; */
-/* 			z-index:5000; */
-/* 			border-color: transparent; */
-/* 			border-style: solid; */
-/* 			border-width: 5px 0 5px 5px; */
-/* 			border-left-color: #ccc; */
-/* 			margin-top: 5px; */
-/* 			margin-right: -10px; */
-/* 		} */
-
-/* 		.dropdown-submenu:hover>a:after { */
-/* 			border-left-color: #fff; */
-/* 		} */
-
-/* 		.dropdown-submenu.pull-left { */
-/* 			float: none; */
-/* 			z-index:5000; */
-/* 		} */
-
-/* 		.dropdown-submenu.pull-left>.dropdown-menu { */
-/* 			left: -100%; */
-/* 			z-index:5000; */
-/* 			margin-left: 10px; */
-/* 			-webkit-border-radius: 6px 0 6px 6px; */
-/* 			-moz-border-radius: 6px 0 6px 6px; */
-/* 			border-radius: 6px 0 6px 6px; */
-/* 		} */
-		
-		#icon-print {
-			padding-left: 10px;
-			cursor: pointer;
-		}
-		#modal-dialog-table {
-		    position:fixed;
-		    top: 35%;
-		    width:100%;
-		    background-color: #fff;
-		    -webkit-background-clip: padding-box;
-		            background-clip: padding-box;
-		    border: none;
-		    border: none;
-		    border-radius: 0px;
-		    outline: 0;
-		    -webkit-box-shadow: none;
-		            box-shadow: none;
-		}
-
+/* modalMask-dialog-table, related to exportPDF.js */
+#modalMask-dialog-table {
+    position:fixed;
+    top: 35%;
+    width:100%;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+            background-clip: padding-box;
+    border: none;
+    border: none;
+    border-radius: 0px;
+    outline: 0;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+}
 		
